--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 # http://wiki.nginx.org/Configuration
 
 # Run as a less privileged user for security reasons.
-user www www;
+user www-data www-data;
 
 # How many worker threads to run;
 # "auto" sets it to the number of CPU cores available in the system, and
@@ -11,7 +11,7 @@ user www www;
 
 # The maximum number of connections for Nginx is calculated by:
 # max_clients = worker_processes * worker_connections
-worker_processes 2;
+worker_processes auto;
 
 # Maximum open file descriptors per process;
 # should be > worker_connections.
@@ -26,8 +26,8 @@ events {
 
 # Default error log file
 # (this is only used when you don't override error_log on a server{} level)
-error_log  logs/error.log warn;
-pid        /var/run/nginx.pid;
+error_log  /var/log/nginx/error.log warn;
+pid        /run/nginx.pid;
 
 http {
 
@@ -45,7 +45,7 @@ http {
 
   # Default log file
   # (this is only used when you don't override access_log on a server{} level)
-  access_log logs/access.log main;
+  access_log /var/log/nginx/access.log main;
 
   # How long to allow each connection to stay idle; longer values are better
   # for each individual client, particularly for SSL, but means that worker
