--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 # http://wiki.nginx.org/Configuration
 
 # Run as a less privileged user for security reasons.
-user www-data www-data;
+user nginx nginx;
 
 # How many worker threads to run;
 # "auto" sets it to the number of CPU cores available in the system, and
@@ -27,7 +27,7 @@ events {
 # Default error log file
 # (this is only used when you don't override error_log on a server{} level)
 error_log  /var/log/nginx/error.log warn;
-pid        /run/nginx.pid;
+pid        /var/run/nginx.pid;
 
 http {
 
