--- a/playbook_copyNginxConfigToDigitaloceanAndRestart.yaml
+++ b/playbook_copyNginxConfigToDigitaloceanAndRestart.yaml
@@ -1,9 +1,14 @@
 ---
 - hosts: do
-	tasks:
-    - name: remove old nginx config file
-      shell: mv /etc/nginx /etc/nginx-old
-	- name: copy nginx config to server
-	  copy: ./dist /etc/nginx
-    - name: restart nginx server
-      shell: nginx -s restart
+  tasks:
+    - name: move old nginx config
+      command: /bin/mv /etc/nginx /etc/nginx-old
+    - name: copy new nginx config
+      copy: src=./dist/ dest=/etc/nginx owner=www-data group=www-data
+      notify:
+      - restart nginx
+    - name: ensure nginx is running
+      service: name=nginx state=started enabled=yes
+  handlers:
+    - name: restart nginx
+      command: /usr/sbin/nginx -s restart
